--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.7.2",
     "moment": "^2.24.0",
     "vue": "^2.5.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
